# advent-of-code

./: .gitignore  README.md  go.work  pyproject.toml
2022/: main.go
2022/1/: main.go
2022/five/: main.go
2022/four/: main.go
2022/four/camp/: camp.go
2022/go/: README.md  go.mod  main.go
2022/go/eight/: main.go
2022/go/eighteen/: eighteen.go
2022/go/eleven/: eleven.go
2022/go/fifteen/: fifteen.go
2022/go/five/: main.go
2022/go/four/: main.go
2022/go/four/camp/: camp.go
2022/go/fourteen/: fourteen.go
2022/go/nine/: main.go  nine.go  nine_test.go
2022/go/nineteen/: nineteen.go
2022/go/one/: main.go
2022/go/seven/: main.go
2022/go/seventeen/: seventeen.go
2022/go/six/: main.go
2022/go/sixteen/: sixteen.go
2022/go/ten/: ten.go  ten_test.go
2022/go/thirteen/: thirteen.go
2022/go/three/: main.go
2022/go/twelve/: twelve.go
2022/go/twenty/: twenty.go
2022/go/twentyone/: twentyone.go
2022/go/twentytwo/: twentytwo.go
2022/go/two/: main.go
2022/go/utils/: contains.go  math.go  parser.go
2022/one/: main.go
2022/one/calorieElf/: elf.go
2022/rust-aoc/src/: main.rs  one.rs
2022/six/: main.go
2022/three/: main.go
2022/three/rucksack/: rucksack.go
2022/two/: main.go
2022/two/game/: game.go
2022/utils/: cast.go  contains.go  io.go  parser.go  readFile.go
2023/go/: README.md  go.mod  main.go
2023/go/one/: main.go
2023/go/three/: main.go  readFile.go
2023/go/two/: main.go  readFile.go
2023/go/utils/: parser.go
twentythree/go/: go.mod  main.go
twentythree/go/one/: main.go
twentythree/python/: __main__.py
(+21 files in other folders)
